--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "mailto": "^0.1.2",
+    "nodemailer": "^2.6.4",
     "path": "^0.12.7"
   }
 }
