--- a/package.json
+++ b/package.json
@@ -22,5 +22,13 @@
     "express": "^4.14.0",
     "nodemailer": "^2.7.0",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "bower": "^1.8.0",
+    "browserify": "^13.3.0",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.4.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-jasmine": "^1.1.0"
   }
 }
